# blogscraper

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  LICENSE  Makefile  README.md  caddy-mgr.sh  docker-compose.yml  mypy.ini  nginx.template.conf  pyproject.toml  spec.md
.github/workflows/: ci.yml
.specstory/history/: 2025-02-28_00-33-creating-project-data-folder-and-file.md  2025-02-28_00-33-refactoring-web-scraper-for-code-reusability.md
backend/: .dockerignore  .gitignore  .pyrightconfig.json  Dockerfile  Makefile  README.md  pyproject.toml
backend/src/blogscraper/: content_viewer.py  main.py  prompt.py  types.py  ui.py
backend/src/blogscraper/scrape/: __init__.py  all_scrapers.py  run_scrapers.py  scraper_utils.py
backend/src/blogscraper/scrape/scrapers/: cliffnotes.py  nathanbenaich.py  simonwillison.py  thezvi.py
backend/src/blogscraper/tasks/: __init__.py  delete_unneeded_docs.py  filter_urls.py  generate_doc.py  generate_llm_prompt.py  scrape_blogs.py
backend/src/blogscraper/utils/: google_interface.py  mongodb_helpers.py  storage.py  sys_utils.py  time_utils.py  url_utils.py
dev-docs/: blogscraper-digest.txt  config.md  dev-notes.md  google-integration.md  repomix-output-deg-blogscraper.md
frontend/: .dockerignore  Dockerfile  Makefile  package.json  vite.config.ts
frontend/openapi/: orval.config.ts  schema.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: custom-fetch.ts  orval.ts
frontend/src/api/types/: _healthStatus.ts  _scrapeStarted.ts  _scrapeStatus.ts  bodyStartScrapeScrapePost.ts  deleteGoogleDocDeleteGoogleDocPostParams.ts  gDoc.ts  googleDocFromDocumentsGoogleDocFromDocumentsGetParams.ts  hTTPValidationError.ts  healthGet200.ts  index.ts  listDocumentsListDocumentsGetParams.ts  llmPromptFromDocumentsLlmPromptFromDocumentsGetParams.ts  markdownFromDocumentsMarkdownFromDocumentsGetParams.ts  scrapeStatusScrapeStatusTaskIdGet200.ts  sourcesSourcesGetParams.ts  startScrapeScrapePost200.ts  startScrapeScrapePostParams.ts  validationError.ts  validationErrorLocItem.ts
frontend/src/components/: ExportRunner.tsx  ExportSelect.tsx  ExportUI.tsx  MarkdownViewer.tsx  PageContainer.ts
frontend/src/hooks/: usePollingUntil.ts
frontend/src/pages/: DocsPage.tsx  ExportPage.tsx  ScrapePage.tsx
src/blogscraper/: content_viewer.py  main.py  prompt.py  scraper_manager.py  types.py  ui.py
src/blogscraper/scrape/: run_scrapers.py  scraper_utils.py
src/blogscraper/scrape/scrapers/: cliffnotes.py  nathanbenaich.py  simonwillison.py  thezvi.py
src/blogscraper/scrapers/: nathanbenaich.py  simonwillison.py  thezvi.py
src/blogscraper/tasks/: display_blogs.py  filter_urls.py  generate_doc.py  generate_llm_prompt.py  list_urls.py  scrape_blogs.py
src/blogscraper/utils/: google_interface.py  scraper_utils.py  storage.py  sys_utils.py  time_utils.py  url_utils.py
tests/: test_helpers.py  test_main.py
