[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "blogscraper"
version = "0.1.0"
description = ""
authors = [
  { name = "David Goldfarb", email = "deg@degel.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "requests==2.32.3",
  "beautifulsoup4==4.13.3",
  "questionary==2.1.0",
  "rich==13.9.4",
  "trafilatura==2.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pre-commit==4.1.0",
  "pyright==1.1.396",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "ruff==0.9.9",
  "black==25.1.0",
  "ipython==9.0.1",
  "isort==6.0.1",
  "gitingest==0.1.3",
  "types-requests==2.32.0.20250301",
  "types-beautifulsoup4==4.12.0.20250204"
]

[project.scripts]
blogscraper = "src.blogscraper.main:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
strict = true

[tool.pytest]
minversion = "6.0"
addopts = "-ra -q --cov=."
testpaths = ["tests"]
