[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "blogscraper"
version = "0.1.0"
description = ""
authors = [
  { name = "David Goldfarb", email = "deg@degel.com" }
]
readme = "../README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "beautifulsoup4==4.13.3",
  "google-api-python-client==2.164.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==1.2.1",
  "google-auth==2.38.0",
  "questionary==2.1.0",
  "requests==2.32.3",
  "rich==13.9.4",
  "trafilatura==2.0.0",
  "dotenv==0.9.9",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "flake8==7.1.2",
  "gitingest==0.1.4",
  "ipython==9.0.2",
  "isort==6.0.1",
  "mypy==1.15.0",
  "pre-commit==4.1.0",
  "pyright==1.1.396",
  "pytest-cov==6.0.0",
  "pytest==8.3.5",
  "ruff==0.11.0",
  "types-beautifulsoup4==4.12.0.20250204",
  "types-requests==2.32.0.20250306"
]

[project.scripts]
blogscraper = "src.blogscraper.main:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.pytest]
minversion = "6.0"
addopts = "-ra -q --cov=."
testpaths = ["tests"]
